--- a/app/globals.css
+++ b/app/globals.css
@@ -50,7 +50,7 @@ body {
     box-sizing: border-box;
 }
 html, body, #__next {
-    height: 100dvh;
+    height: 100%;
     width: 100%;
     font-family: 'Geist Sans', sans-serif;
     background-color: var(--color-bg-main);
